[gd_scene load_steps=17 format=3 uid="uid://4t4ad7dbaau5"]

[ext_resource type="Script" uid="uid://drorcdbvthd6u" path="res://scripts/entities/Enemies/suicide_enemy.gd" id="1_j63ue"]
[ext_resource type="Texture2D" uid="uid://chdytcc13xyqu" path="res://assets/Enemys/Enemy_2.png" id="2_qf04l"]
[ext_resource type="Texture2D" uid="uid://dpb6y3o0lgeos" path="res://assets/explosion.png" id="3_y2mgn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y2mgn"]
atlas = ExtResource("2_qf04l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lqmq"]
atlas = ExtResource("3_y2mgn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hkx1"]
atlas = ExtResource("3_y2mgn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_btebc"]
atlas = ExtResource("3_y2mgn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1ihg"]
atlas = ExtResource("3_y2mgn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a84i"]
atlas = ExtResource("3_y2mgn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_327dn"]
atlas = ExtResource("3_y2mgn")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e77cu"]
atlas = ExtResource("3_y2mgn")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_156nx"]
atlas = ExtResource("3_y2mgn")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugqvl"]
atlas = ExtResource("3_y2mgn")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu37x"]
atlas = ExtResource("3_y2mgn")
region = Rect2(144, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_j63ue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2mgn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lqmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hkx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btebc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1ihg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a84i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_327dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e77cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_156nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugqvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu37x")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explosion",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qf04l"]
size = Vector2(12, 13)

[node name="Suicide Enemy" type="Area2D" node_paths=PackedStringArray("animatesprite")]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_j63ue")
attack_speed = 200.0
animatesprite = NodePath("AnimatedSprite2D")
metadata/_custom_type_script = "uid://b7ykwp10iaujb"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j63ue")
animation = &"explosion"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_qf04l")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
